# json-benchmark

./: .gitignore  script.js
benchmarks/: co2-high.js  gps-coords.js  humidity-avg.js  insert.js
rust-duckdb/: Cargo.toml
rust-duckdb/src/: main.rs
rust-sqlite/: Cargo.toml
rust-sqlite/src/: main.rs  migration.rs
testing/: bun.lockb  package.json  populate.ts  test-upload.ts
ts-duckdb/: bun.lockb  package.json
ts-duckdb/src/: index.ts  schema.ts
ts-sqlite/: bun.lockb  db-schema.sqlite-shm  db-schema.sqlite-wal  package.json
ts-sqlite/src/: index-virtual.ts  index.ts  populate.ts  schema.ts  test-upload.ts
